[gd_scene load_steps=18 format=3 uid="uid://dwo113wvy1q4h"]

[ext_resource type="Script" uid="uid://b6ec37lwwwyke" path="res://Scripts/Enemies/Enemy_urchin.gd" id="1_ip3uh"]
[ext_resource type="Texture2D" uid="uid://dyqeb36ox6iv0" path="res://Sprites/Player/PlayerShadow.png" id="2_rdmt3"]
[ext_resource type="Texture2D" uid="uid://clqjl8ra6navw" path="res://Sprites/Enemies/PupperFish.png" id="3_xramv"]
[ext_resource type="AudioStream" uid="uid://bpw5hpam3lt6q" path="res://Audios/hit.ogg" id="4_xramv"]

[sub_resource type="Gradient" id="Gradient_m07os"]
offsets = PackedFloat32Array(0, 0.7133333)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_154kc"]
gradient = SubResource("Gradient_m07os")
fill = 1
fill_from = Vector2(0.5046729, 0.4906542)
fill_to = Vector2(1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uxghh"]
radius = 2.919282
height = 15.044622

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_75682"]
radius = 7.0
height = 44.0

[sub_resource type="Animation" id="Animation_jk48a"]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_f7y7g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rqcdr"]
resource_name = "idle_Left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qaqq8"]
resource_name = "idle_Right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87e62"]
_data = {
&"Attack": SubResource("Animation_jk48a"),
&"RESET": SubResource("Animation_f7y7g"),
&"idle_Left": SubResource("Animation_rqcdr"),
&"idle_Right": SubResource("Animation_qaqq8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xramv"]
radius = 12.0
height = 52.0

[sub_resource type="Animation" id="Animation_uxghh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xramv"]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16912171, 0.26896465, 0.43604875, 0.59702003),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.5351769, 0, 0.11312687, 1), Color(1, 1, 1, 1), Color(0.5138763, 0, 0.13198623, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75682"]
_data = {
&"RESET": SubResource("Animation_uxghh"),
&"damage": SubResource("Animation_xramv")
}

[node name="Urchin" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_ip3uh")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("2_rdmt3")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -21)
texture = ExtResource("3_xramv")
flip_h = true
hframes = 3

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -21)
scale = Vector2(0.78125, 0.78125)
color = Color(0.6431373, 0.50980395, 1, 0.4392157)
texture = SubResource("GradientTexture2D_154kc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.4210855e-14, 3)
rotation = 1.5707964
scale = Vector2(-1.7127497, 2.791695)
shape = SubResource("CapsuleShape2D_uxghh")

[node name="AttackHitBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(11, -65)
rotation = 1.5707964
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitBox"]
modulate = Color(0.8618463, 2.8878452e-07, 0.49752194, 1)
position = Vector2(68, 10.999997)
shape = SubResource("CapsuleShape2D_75682")
debug_color = Color(0.8478625, 0.0009508711, 0.90637434, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_87e62")
}
autoplay = "idle_Right"

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(0, -18)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 20)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_xramv")
debug_color = Color(0.7490196, 0.4627451, 0, 0.3137255)

[node name="AudioStreamPlayer_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xramv")

[node name="AnimationPlayer_Damage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_75682")
}

[connection signal="area_entered" from="AttackHitBox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
